{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 57,
  "lineage": "a4e34c9a-d18c-9b3b-a3e4-4d9395db01bc",
  "resources": [
    {
      "module": "module.webapp.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025a6a5beb74db87b",
            "arn": "arn:aws:ec2:eu-central-1:654654314330:instance/i-054cf90c2087ebcf8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054cf90c2087ebcf8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016e59486da781acb",
            "private_dns": "ip-172-31-19-222.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.222",
            "public_dns": "ec2-18-153-49-146.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.153.49.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-065a89418f38da108",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-instances-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f82877ced22a1e3",
            "tags": {
              "Name": "instance_1"
            },
            "tags_all": {
              "Name": "instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d23530595eb9d84c"
            ]
          },
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.sg"
          ]
        },
        {
          "index_key": "instance_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025a6a5beb74db87b",
            "arn": "arn:aws:ec2:eu-central-1:654654314330:instance/i-0aa0e63bafc526859",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa0e63bafc526859",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01028a9f3236275c0",
            "private_dns": "ip-172-31-21-46.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.46",
            "public_dns": "ec2-18-195-240-45.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.240.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d02f22141168b898",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-instances-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f82877ced22a1e3",
            "tags": {
              "Name": "instance_2"
            },
            "tags_all": {
              "Name": "instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d23530595eb9d84c"
            ]
          },
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:loadbalancer/app/tf-lb-20240122181730922100000005/ee590ed56bd16003",
            "arn_suffix": "app/tf-lb-20240122181730922100000005/ee590ed56bd16003",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240122181730922100000005-1009798343.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:loadbalancer/app/tf-lb-20240122181730922100000005/ee590ed56bd16003",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240122181730922100000005",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e22b468679dec43b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f82877ced22a1e3"
              },
              {
                "subnet_id": "subnet-0c818e1ed90556dd3"
              }
            ],
            "subnets": [
              "subnet-05f82877ced22a1e3",
              "subnet-0c818e1ed90556dd3"
            ],
            "vpc_id": "vpc-0dc32666700125481",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.alb_sg",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1a",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1b"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-lb-listener",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:listener/app/tf-lb-20240122181730922100000005/ee590ed56bd16003/7ab9670709ca24ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:listener/app/tf-lb-20240122181730922100000005/ee590ed56bd16003/7ab9670709ca24ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:loadbalancer/app/tf-lb-20240122181730922100000005/ee590ed56bd16003",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.load_balancer.aws_lb.application-lb",
            "module.webapp.module.security_group.aws_security_group.alb_sg",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1a",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1b"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_rule",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:targetgroup/tf-20240122181730629900000003/c1ad3cf3d8f9997a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:listener-rule/app/tf-lb-20240122181730922100000005/ee590ed56bd16003/7ab9670709ca24ee/0a6a059a9a63f13b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:listener-rule/app/tf-lb-20240122181730922100000005/ee590ed56bd16003/7ab9670709ca24ee/0a6a059a9a63f13b",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:listener/app/tf-lb-20240122181730922100000005/ee590ed56bd16003/7ab9670709ca24ee",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.load_balancer.aws_lb.application-lb",
            "module.webapp.module.load_balancer.aws_lb_listener.http-lb-listener",
            "module.webapp.module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.webapp.module.security_group.aws_security_group.alb_sg",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1a",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1b",
            "module.webapp.module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:targetgroup/tf-20240122181730629900000003/c1ad3cf3d8f9997a",
            "arn_suffix": "targetgroup/tf-20240122181730629900000003/c1ad3cf3d8f9997a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:targetgroup/tf-20240122181730629900000003/c1ad3cf3d8f9997a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240122181730629900000003",
            "name_prefix": "tf-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc32666700125481"
          },
          "dependencies": [
            "module.webapp.module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_attachment",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:targetgroup/tf-20240122181730629900000003/c1ad3cf3d8f9997a-20240122181803625700000008",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:targetgroup/tf-20240122181730629900000003/c1ad3cf3d8f9997a",
            "target_id": "i-054cf90c2087ebcf8"
          },
          "dependencies": [
            "module.webapp.module.ec2.aws_instance.instance",
            "module.webapp.module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.webapp.module.security_group.aws_security_group.sg",
            "module.webapp.module.vpc.aws_default_vpc.vpc"
          ]
        },
        {
          "index_key": "instance_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:targetgroup/tf-20240122181730629900000003/c1ad3cf3d8f9997a-20240122181803695400000009",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:654654314330:targetgroup/tf-20240122181730629900000003/c1ad3cf3d8f9997a",
            "target_id": "i-0aa0e63bafc526859"
          },
          "dependencies": [
            "module.webapp.module.ec2.aws_instance.instance",
            "module.webapp.module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.webapp.module.security_group.aws_security_group.sg",
            "module.webapp.module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_http_inbound",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3899839551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e22b468679dec43b",
            "security_group_rule_id": "sgr-02fa567cf046d37ce",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_http_outbound",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3570501859",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e22b468679dec43b",
            "security_group_rule_id": "sgr-018da6a22cebcbdec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654314330:security-group/sg-0e22b468679dec43b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e22b468679dec43b",
            "ingress": [],
            "name": "terraform-20240122181729178300000001",
            "name_prefix": "terraform-",
            "owner_id": "654654314330",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc32666700125481"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webapp.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654314330:security-group/sg-0d23530595eb9d84c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d23530595eb9d84c",
            "ingress": [],
            "name": "ec2-instances-sg",
            "name_prefix": "",
            "owner_id": "654654314330",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc32666700125481"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webapp.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1744667580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d23530595eb9d84c",
            "security_group_rule_id": "sgr-0e373b775707c7dd6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet-1a",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654314330:subnet/subnet-05f82877ced22a1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-05f82877ced22a1e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654314330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc32666700125481"
          }
        }
      ]
    },
    {
      "module": "module.webapp.module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet-1b",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654314330:subnet/subnet-0c818e1ed90556dd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0c818e1ed90556dd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654314330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc32666700125481"
          }
        }
      ]
    },
    {
      "module": "module.webapp.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "vpc",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654314330:vpc/vpc-0dc32666700125481",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0167eddc7214ad8fa",
            "default_route_table_id": "rtb-039c0ba668ae68e19",
            "default_security_group_id": "sg-097be3eaf0b65ebb5",
            "dhcp_options_id": "dopt-0e4709603420416c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0dc32666700125481",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039c0ba668ae68e19",
            "owner_id": "654654314330"
          }
        }
      ]
    }
  ]
}